AXBUM-12: set item template