@@ -19,6 +19,7 @@ package com.foreach.across.modules.bootstrapui.elements.builder;
 import com.foreach.across.modules.bootstrapui.elements.AutosuggestFormElementConfiguration;
 import com.foreach.across.modules.bootstrapui.elements.BootstrapUiFactory;
 import com.foreach.across.modules.bootstrapui.elements.GlyphIcon;
+import com.foreach.across.modules.bootstrapui.elements.TableViewElement;
 import com.foreach.across.modules.bootstrapui.resource.BootstrapUiFormElementsWebResources;
 import com.foreach.across.modules.web.resource.WebResourceRegistry;
 import com.foreach.across.modules.web.ui.ViewElement;
@@ -31,7 +32,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.context.i18n.LocaleContextHolder;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -59,8 +63,10 @@ public class AutoSuggestFormElementBuilder extends AbstractLinkSupportingNodeVie
 
 	private List<String> properties = Collections.singletonList( DEFAULT_PROPERTY );
 	private List<Map<String, Object>> prefill = Collections.emptyList();
-	private Optional<ElementOrBuilder> notFoundTemplate = Optional.empty();
-	private Optional<ElementOrBuilder> suggestionTemplate = Optional.empty();
+	private ElementOrBuilder notFoundTemplate;
+	private ElementOrBuilder suggestionTemplate;
+	private ElementOrBuilder itemTemplate;
+	private ViewElement containerTemplate;
 
 	public AutoSuggestFormElementBuilder configuration( AutosuggestFormElementConfiguration configuration ) {
 		this.configuration = configuration;
@@ -88,23 +94,27 @@ public class AutoSuggestFormElementBuilder extends AbstractLinkSupportingNodeVie
 	}
 
 	public AutoSuggestFormElementBuilder notFoundTemplate( ViewElement notFoundTemplate ) {
-		this.notFoundTemplate = Optional.of( ElementOrBuilder.wrap( notFoundTemplate ) );
+		this.notFoundTemplate = ElementOrBuilder.wrap( notFoundTemplate );
 		return this;
 	}
 
 	public AutoSuggestFormElementBuilder notFoundTemplate( ViewElementBuilder notFoundTemplate ) {
-		this.notFoundTemplate = Optional.of( ElementOrBuilder.wrap( notFoundTemplate ) );
+		this.notFoundTemplate = ElementOrBuilder.wrap( notFoundTemplate );
 		return this;
 	}
 
 	/**
-	 * Use a custom {@code ViewElementBuilder} that will be used as a template for the rendering of suggestions
-	 * in the suggestion dropdown.  If you want to reuse properties from this {@code AutoSuggestFormElementBuilder}
+	 * <p>Use a custom {@code ViewElementBuilder} that will be used as a template for the rendering of suggestions
+	 * in the suggestion dropdown.
+	 * </p>
+	 * <p>
+	 * If you want to reuse properties from this {@code AutoSuggestFormElementBuilder}
 	 * instance, make sure to add an attribute {@code ATTRIBUTE_DATA_PROPERTY}to the node element which inner HTML should
-	 * be replaced
+	 * be replaced.
+	 * </p>
 	 */
 	public AutoSuggestFormElementBuilder suggestionTemplate( ViewElementBuilder template ) {
-		this.suggestionTemplate = Optional.of( ElementOrBuilder.wrap( template ) );
+		this.suggestionTemplate = ElementOrBuilder.wrap( template );
 		return this;
 	}
 
@@ -112,7 +122,26 @@ public class AutoSuggestFormElementBuilder extends AbstractLinkSupportingNodeVie
 	 * {@see com.foreach.across.modules.bootstrapui.elements.builder.AutoSuggestFormElementBuilder#suggestionTemplate}
 	 */
 	public AutoSuggestFormElementBuilder suggestionTemplate( ViewElement template ) {
-		this.suggestionTemplate = Optional.of( ElementOrBuilder.wrap( template ) );
+		this.suggestionTemplate = ElementOrBuilder.wrap( template );
+		return this;
+	}
+
+	/**
+	 * <p>
+	 * Use a custom {@code ViewElement} that will be used as a template for the rendering of selected suggestions.
+	 * </p>
+	 * <p>
+	 * The given {@code ContainerViewElementBuilder} will contain all selected suggestions.  The container may not have child nodes
+	 * The given itemTemplate must contain a node with class {@code CSS_ITEM_TEMPLATE}. This childnode will be repeated
+	 * for all selected suggestions.
+	 * If you want to reuse properties from this {@code AutoSuggestFormElementBuilder} instance, make sure to add an
+	 * attribute {@code ATTRIBUTE_DATA_PROPERTY}to the node element which inner HTML should be replaced
+	 * </p>
+	 */
+	public AutoSuggestFormElementBuilder itemTemplate( ViewElement containerTemplate,
+	                                                   ViewElement itemTemplate ) {
+		this.containerTemplate = containerTemplate;
+		this.itemTemplate = ElementOrBuilder.wrap( itemTemplate );
 		return this;
 	}
 
@@ -130,7 +159,7 @@ public class AutoSuggestFormElementBuilder extends AbstractLinkSupportingNodeVie
 		                         .attribute( ATTRIBUTE_DATA_AUTOSUGGEST, configuration )
 		                         .add( renderInputElement() )
 		                         .add( renderTemplates( viewElementBuilderContext ) )
-		                         .add( renderPrefillValues() )
+		                         .add( renderPrefillValues( viewElementBuilderContext ) )
 		                         .build( viewElementBuilderContext );
 	}
 
@@ -143,71 +172,88 @@ public class AutoSuggestFormElementBuilder extends AbstractLinkSupportingNodeVie
 		return bootstrapUiFactory.textbox().css( CSS_TYPEAHEAD_INPUT );
 	}
 
-	private TableViewElementBuilder renderPrefillValues() {
+	private ViewElement renderPrefillValues( ViewElementBuilderContext viewElementBuilderContext ) {
 		TableViewElementBuilder prefillTableElement = bootstrapUiFactory.table();
-		return prefillTableElement.css( CSS_PREFILL_TABLE )
-		                          .addAll( prefill.stream().map( it -> renderPrefill(
-				                          prefillTableElement, CSS_TYPEAHEAD_ITEM_CLASS, it ) )
-		                                          .collect( Collectors.toList() ) );
+		TableViewElement defaultPrefillValues = prefillTableElement.css( CSS_PREFILL_TABLE )
+		                                                           .addAll( prefill.stream()
+		                                                                           .map( it -> renderDefaultPrefill(
+				                                                                           prefillTableElement,
+				                                                                           it ) )
+		                                                                           .collect( Collectors
+				                                                                                     .toList() ) )
+		                                                           .build( viewElementBuilderContext );
+		return containerTemplate != null ? containerTemplate : defaultPrefillValues;
 	}
 
 	private NodeViewElementBuilder renderTemplates( ViewElementBuilderContext viewElementBuilderContext ) {
 		return bootstrapUiFactory.div()
 		                         .css( "hidden" )
 		                         .add( getSuggestionTemplate( viewElementBuilderContext ) )
-		                         .add( getItemTemplate( CSS_ITEM_TEMPLATE, properties ) )
+		                         .add( getItemTemplate( viewElementBuilderContext ) )
 		                         .add( getNotFoundTemplate( viewElementBuilderContext ) );
 	}
 
 	private NodeViewElementBuilder getNotFoundTemplate( ViewElementBuilderContext viewElementBuilderContext ) {
 		NodeViewElementBuilder notFoundContainer = bootstrapUiFactory.div()
-		                                                             .css( CSS_EMPTY_TEMPLATE, "empty-message" );
-		ElementOrBuilder defaultNotFoundElementOrBuilder = ElementOrBuilder.wrap(
-				bootstrapUiFactory.text( "Not Found" ) );//TODO make label
-		return notFoundContainer.add( notFoundTemplate.orElse( defaultNotFoundElementOrBuilder )
-		                                              .get( viewElementBuilderContext ) );
+		                                                             .css( CSS_EMPTY_TEMPLATE );
+		ViewElement defaultNotFoundViewElement = bootstrapUiFactory.text( "Not Found" )
+		                                                           .build( viewElementBuilderContext );
+		return notFoundContainer.add( notFoundTemplate != null ?
+				                              notFoundTemplate
+						                              .get( viewElementBuilderContext ) : defaultNotFoundViewElement );
 	}
 
 	private NodeViewElementBuilder getSuggestionTemplate( ViewElementBuilderContext viewElementBuilderContext ) {
 		NodeViewElementBuilder suggestionContainer = bootstrapUiFactory.div()
 		                                                               .css( CSS_SUGGESTION_TEMPLATE );
-		ElementOrBuilder defaultSuggestionElementOrBuilder =
-				ElementOrBuilder.wrap( bootstrapUiFactory.container()
-				                                         .addAll( properties.stream()
-				                                                            .map( prop -> bootstrapUiFactory.div()
-				                                                                                            .attribute(
-						                                                                                            ATTRIBUTE_DATA_PROPERTY,
-						                                                                                            prop ) )
-				                                                            .collect( Collectors.toList() ) ) );
-		return suggestionContainer
-				.add( suggestionTemplate.orElse( defaultSuggestionElementOrBuilder ).get( viewElementBuilderContext ) );
+		ViewElement defaultSuggestionElementOrBuilder =
+				bootstrapUiFactory.container()
+				                  .addAll( properties.stream()
+				                                     .map( prop -> bootstrapUiFactory.div()
+				                                                                     .attribute(
+						                                                                     ATTRIBUTE_DATA_PROPERTY,
+						                                                                     prop ) )
+				                                     .collect( Collectors.toList() ) )
+				                  .build( viewElementBuilderContext );
+		return suggestionContainer.add( suggestionTemplate != null ?
+				                                suggestionTemplate
+						                                .get( viewElementBuilderContext ) : defaultSuggestionElementOrBuilder );
 	}
 
-	private TableViewElementBuilder getItemTemplate( String classForRow,
-	                                                 List<String> properties ) {
-		TableViewElementBuilder table = bootstrapUiFactory.table();
-		return table.add( table.row()
-		                       .css( classForRow )
-		                       .addAll( properties.stream()
-		                                          .map( prop -> table.cell()
-		                                                             .attribute( "data-as-property", prop ) )
-		                                          .collect( Collectors.toList() ) )
-		                       .add( table.cell()
-		                                  .css( "row-actions" )
-		                                  .add( bootstrapUiFactory
-				                                        .link()
-				                                        .title( "REMOVE" ) //TODO make configurable
-				                                        .add( new GlyphIcon( GlyphIcon.REMOVE ) ) )
-		                                  .add( bootstrapUiFactory
-				                                        .hidden()
-				                                        .controlName( idProperty ) ) ) );
+	private ViewElement getItemTemplate( ViewElementBuilderContext viewElementBuilderContext ) {
+		if ( itemTemplate != null ) {
+			return itemTemplate.get( viewElementBuilderContext );
+		}
+		TableViewElementBuilder defaultItemContainer = bootstrapUiFactory.table();
+		return defaultItemContainer.add( defaultItemContainer.row()
+		                                                     .css( CSS_ITEM_TEMPLATE )
+		                                                     .addAll( properties.stream()
+		                                                                        .map( prop -> defaultItemContainer
+				                                                                        .cell()
+				                                                                        .attribute(
+						                                                                        "data-as-property",
+						                                                                        prop ) )
+		                                                                        .collect(
+				                                                                        Collectors
+						                                                                        .toList() ) )
+		                                                     .add( defaultItemContainer.cell()
+		                                                                               .css( "row-actions" )
+		                                                                               .add( bootstrapUiFactory
+				                                                                                     .link()
+				                                                                                     .title( "REMOVE" ) //TODO make configurable
+				                                                                                     .add( new GlyphIcon(
+						                                                                                     GlyphIcon.REMOVE ) ) )
+		                                                                               .add( bootstrapUiFactory
+				                                                                                     .hidden()
+				                                                                                     .controlName(
+						                                                                                     idProperty ) ) ) )
+		                           .build( viewElementBuilderContext );
 	}
 
-	private TableViewElementBuilder.Row renderPrefill( TableViewElementBuilder table,
-	                                                   String classForRow,
-	                                                   Map<String, Object> items ) {
+	private TableViewElementBuilder.Row renderDefaultPrefill( TableViewElementBuilder table,
+	                                                          Map<String, Object> items ) {
 		return table.row()
-		            .css( classForRow )
+		            .css( CSS_TYPEAHEAD_ITEM_CLASS )
 		            .addAll( items.entrySet().stream()
 		                          .map( prop -> table.cell()
 		                                             .text( prop.getValue().toString() ) )
